import { describe, it, expect } from 'vitest';
import { process, plainMarkdown } from '../src/index.js';

/**
 * Cross-engine parity corpus. These inputs were verified to produce output that
 * is byte-identical to the markawesome Ruby engine (except for insignificant
 * whitespace inside markdown list rendering — Kramdown indents `<li>`, which is
 * cosmetic). The inline snapshots below lock that Ruby-matching behaviour so
 * future changes can't silently drift.
 */
const CORPUS: Array<{ name: string; input: string }> = [
  { name: 'callout', input: ':::info\nHello **world** and `code`\n:::' },
  {
    name: 'callout-attrs',
    input: ':::warning large filled-outlined icon:shield sharp regular bounce\nHeads up\n:::',
  },
  { name: 'badge', input: '!!!brand pill filled\n**New** stuff\n!!!' },
  {
    name: 'button-link',
    input: '%%%brand large icon:download _blank download\n[**Get** it](https://x.com/a.zip)\n%%%',
  },
  { name: 'tag-inline', input: 'Status: @@@ success icon:check Done @@@ ok' },
  { name: 'comparison', input: '|||50\n![Before](b.jpg)\n![After](a.jpg)\n|||' },
  { name: 'tooltip', input: '(((distance:5 API term >>> Application Programming Interface)))' },
  {
    name: 'popover-aligned-skidding-block',
    input: '&&&bottom-start skidding:12\nTrigger\n>>>\nBody\n&&&',
  },
  {
    name: 'popover-aligned-skidding-inline',
    input: 'Click &&&right-start skidding:-4 here >>> Aligned popover&&& now.',
  },
  {
    name: 'tooltip-aligned-skidding-inline',
    input: '(((right-end skidding:-4 API >>> Application Programming Interface)))',
  },
  {
    name: 'tooltip-aligned-skidding-block',
    input: ':::wa-tooltip bottom-end distance:8 skidding:12\nREST\n>>>\nRepresentational State Transfer\n:::',
  },
  {
    name: 'tabs-disabled',
    input:
      '++++++top\n+++ Tab 1\nContent 1\n+++\n+++ disabled Coming soon\nNot yet available.\n+++\n++++++',
  },
  { name: 'layout-flank', input: '::::flank start size:200px content:60% gap:m\nSide\n::::' },
  { name: 'date-inline-style', input: 'Published [[[2026-06-26 style:long]]].' },
  {
    name: 'date-inline-datetime',
    input: 'Released [[[2026-06-26T14:30:00Z style:medium time:short hour-format:24]]].',
  },
  { name: 'date-inline-granular', input: '[[[2026-06-26 style:full month:short lang:fr]]]' },
  { name: 'date-relative', input: 'Updated [[[relative 2026-06-20 format:short numeric:always]]].' },
  { name: 'date-relative-sync', input: 'Live [[[relative 2026-06-20 sync]]]' },
  { name: 'date-block', input: ':::wa-format-date 2026-06-26 style:full lang:fr\n:::' },
  {
    name: 'video-block',
    input: ';;;controls:full autoplay muted\n[My Clip](test_video.mp4)\n![Poster](test_video_poster.jpg)\n;;;',
  },
  { name: 'video-alt', input: ':::wa-video preload:none loop\n[Clip](v.mp4)\n:::' },
  {
    name: 'video-playlist-block',
    input: ';;;;;;controls:standard\n;;;\n[Part 1](a.mp4)\n![Poster A](a.jpg)\n;;;\n;;;\n[Part 2](b.mp4)\n;;;\n;;;;;;',
  },
  {
    name: 'video-playlist-alt',
    input: ':::wa-video-playlist controls:none\n;;;\n[One](1.mp4)\n;;;\n;;;\n[Two](2.mp4)\n![P](2.jpg)\n;;;\n:::',
  },
  // Card: a horizontal card wraps its body in a single <div> so Web Awesome's
  // `:host([orientation='horizontal']) .body slot::slotted(*) { height: 100% }`
  // rule targets one wrapper instead of each block — a heading + paragraph body
  // would otherwise have each child stretched to full height and overflow.
  {
    name: 'card-horizontal-body-wrap',
    input:
      '===horizontal\n![Feature](photo.jpg)\n# Horizontal card\nMedia and content sit **side-by-side**.\n===',
  },
  // Nested block components inside container item bodies. The internal renderer
  // must not wrap these in a `<p>` — Kramdown doesn't, so neither does the Node
  // engine (see src/wa-block-rule.ts). Snapshots verified byte-identical to Ruby.
  {
    name: 'callout-in-accordion',
    input: '//////\n/// Section\n\n:::success\nNested **callout** text.\n:::\n\n///\n//////',
  },
  {
    name: 'callout-in-card',
    input: '===\n:::warning\nCard-nested callout.\n:::\n===',
  },
  {
    name: 'callout-in-tab-panel',
    input: '++++++\n+++ Tab 1\n:::info\nTab callout body.\n:::\n+++\n++++++',
  },
  {
    name: 'callout-in-details',
    input: '^^^\nSummary\n>>>\n:::info\nDetails callout.\n:::\n^^^',
  },
  // Tree: nested Markdown bullet list -> <wa-tree>/<wa-tree-item>. Covers fence
  // `open` + folder/file icons, deep nesting with colon-bearing element-name
  // labels, and the `:::wa-tree` alternative with a per-node `expanded` flag.
  {
    name: 'tree-zip',
    input:
      '||||||open\n- icon:folder my-plugin\n  - icon:folder dist\n    - icon:file-code index.js\n    - icon:file-code index.d.ts\n  - icon:folder src\n    - icon:file-code index.ts\n  - icon:file README.md\n  - icon:file package.json\n- icon:file LICENSE\n||||||',
  },
  {
    name: 'tree-invoice',
    input:
      '||||||open\n- Invoice\n  - cbc:CustomizationID\n  - cbc:ID\n  - cbc:IssueDate\n  - cac:AccountingSupplierParty\n    - cac:Party\n      - cac:PostalAddress\n      - cac:PartyLegalEntity\n  - cac:AccountingCustomerParty\n    - cac:Party\n  - cac:InvoiceLine\n    - cbc:ID\n    - cbc:InvoicedQuantity\n    - cac:Item\n      - cbc:Name\n      - cac:Price\n||||||',
  },
  {
    name: 'tree-alt-per-node-expanded',
    input: ':::wa-tree\n- expanded icon:folder src\n  - icon:file index.ts\n- README.md\n:::',
  },
  // Random-content: `......` fence + `>>>` option separator -> <wa-random-content>
  // with each option wrapped in one <div>. Covers the combined param example,
  // the `:::wa-random-content` alternative, autoplay + interval with three
  // options, a single option (no separator), and — because random-content runs
  // last — an already-transformed callout wrapped inside an option <div>.
  {
    name: 'random-content',
    input:
      '......mode:random items:2 animation:fade\nA **testimonial** or tip\n>>>\nAnother option\n......',
  },
  {
    name: 'random-content-alt',
    input: ':::wa-random-content sequence\nFirst option\n>>>\nSecond option\n:::',
  },
  {
    name: 'random-content-autoplay',
    input: '......autoplay autoplay-interval:4000 items:1\nTip one\n>>>\nTip two\n>>>\nTip three\n......',
  },
  {
    name: 'random-content-single',
    input: '......\nJust the one option\n......',
  },
  {
    name: 'callout-in-random-content',
    input: '......\n:::success\nNested **callout** text.\n:::\n......',
  },
  // Icon: WA 3.10.0 attribute sync — the new `canvas` attribute (emitted last),
  // the `semibold` variant, a new family, a new animation, and the full
  // `family variant animation canvas` emission order in one block. Also a callout
  // forwarding the new tokens (family/variant/animation) to its slotted icon.
  {
    name: 'icon-3.10-canvas',
    input: ':::wa-icon star roomy\n:::',
  },
  {
    name: 'icon-3.10-full-order',
    input: ':::wa-icon star sharp semibold wag roomy\n:::',
  },
  {
    name: 'callout-icon-3.10',
    input: ':::danger jelly semibold wag\nWatch out\n:::',
  },
];

describe('parity corpus (locked to Ruby-matching output)', () => {
  for (const { name, input } of CORPUS) {
    it(name, () => {
      expect(process(input, { imageDialog: { defaultWidth: '90vh' } })).toMatchSnapshot();
    });
  }
});

/**
 * The same CORPUS run through the plain-markdown degradation path. Sharing one
 * CORPUS is what guarantees both engines consume byte-identical input; these
 * snapshots were verified byte-for-byte against the Ruby
 * `Markawesome::PlainMarkdownRenderer.process(input, image_dialog: { default_width: '90vh' })`
 * output. Vitest keys snapshots by describe+name, so they coexist with the HTML
 * snapshots above in the same `.snap` file.
 */
describe('parity corpus — plain markdown (locked to Ruby-matching output)', () => {
  for (const { name, input } of CORPUS) {
    it(name, () => {
      expect(
        plainMarkdown.process(input, { imageDialog: { defaultWidth: '90vh' } }),
      ).toMatchSnapshot();
    });
  }
});
